objects/Boom__c.object
<CustomObject>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalId>true</externalId>
        <label>CloseDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <externalId>true</externalId>
        <label>StageName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Boom</label>
    <nameField>
        <label>Boom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>